--- a/sankaskep/package.json
+++ b/sankaskep/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sankaskep",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
